src/Parser2/simpleCParser.py
# Generated from simpleC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class simpleCParser ( Parser ):

    grammarFileName = "simpleC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'double'", "'char'", "'string'", 
                     "'['", "']'", "'void'", "'#include'", "'<'", "'>'", 
                     "'('", "')'", "'{'", "'}'", "','", "';'", "'='", "'if'", 
                     "'else'", "'while'", "'for'", "'return'", "'!'", "'*'", 
                     "'/'", "'%'", "'+'", "'-'", "'=='", "'!='", "'<='", 
                     "'>='", "'&&'", "'||'", "'printf'", "'scanf'", "'&'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "INT", "DOUBLE", "CHAR", 
                      "STRING", "LIB", "CONJUNCTION", "OPERATOR", "INLINECOMMENT", 
                      "BLOCKCOMMENT", "WS" ]

    RULE_myID = 0
    RULE_myINT = 1
    RULE_myDOUBLE = 2
    RULE_myCHAR = 3
    RULE_mySTRING = 4
    RULE_myLIB = 5
    RULE_myTYPE = 6
    RULE_myARRAY = 7
    RULE_myARRAYITEM = 8
    RULE_myVOID = 9
    RULE_program = 10
    RULE_include = 11
    RULE_myFunction = 12
    RULE_defineParams = 13
    RULE_defineParam = 14
    RULE_functionBody = 15
    RULE_body = 16
    RULE_block = 17
    RULE_defineBlock = 18
    RULE_baseInitialBlock = 19
    RULE_arrayInitialBlock = 20
    RULE_assignBlock = 21
    RULE_ifBlocks = 22
    RULE_ifBlock = 23
    RULE_elifBlock = 24
    RULE_elseBlock = 25
    RULE_condition = 26
    RULE_whileBlock = 27
    RULE_forBlock = 28
    RULE_forDefineBlock = 29
    RULE_forIteratorBlock = 30
    RULE_returnBlock = 31
    RULE_expr = 32
    RULE_func = 33
    RULE_printfFunction = 34
    RULE_scanfFunction = 35
    RULE_selfDefinedFunction = 36
    RULE_argument = 37

    ruleNames =  [ "myID", "myINT", "myDOUBLE", "myCHAR", "mySTRING", "myLIB", 
                   "myTYPE", "myARRAY", "myARRAYITEM", "myVOID", "program", 
                   "include", "myFunction", "defineParams", "defineParam", 
                   "functionBody", "body", "block", "defineBlock", "baseInitialBlock", 
                   "arrayInitialBlock", "assignBlock", "ifBlocks", "ifBlock", 
                   "elifBlock", "elseBlock", "condition", "whileBlock", 
                   "forBlock", "forDefineBlock", "forIteratorBlock", "returnBlock", 
                   "expr", "func", "printfFunction", "scanfFunction", "selfDefinedFunction", 
                   "argument" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    ID=38
    INT=39
    DOUBLE=40
    CHAR=41
    STRING=42
    LIB=43
    CONJUNCTION=44
    OPERATOR=45
    INLINECOMMENT=46
    BLOCKCOMMENT=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MyIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(simpleCParser.ID, 0)

        def getRuleIndex(self):
            return simpleCParser.RULE_myID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyID" ):
                listener.enterMyID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyID" ):
                listener.exitMyID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyID" ):
                return visitor.visitMyID(self)
            else:
                return visitor.visitChildren(self)




    def myID(self):

        localctx = simpleCParser.MyIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_myID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(simpleCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyINTContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(simpleCParser.INT, 0)

        def getRuleIndex(self):
            return simpleCParser.RULE_myINT

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyINT" ):
                listener.enterMyINT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyINT" ):
                listener.exitMyINT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyINT" ):
                return visitor.visitMyINT(self)
            else:
                return visitor.visitChildren(self)




    def myINT(self):

        localctx = simpleCParser.MyINTContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_myINT)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(simpleCParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyDOUBLEContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE(self):
            return self.getToken(simpleCParser.DOUBLE, 0)

        def getRuleIndex(self):
            return simpleCParser.RULE_myDOUBLE

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyDOUBLE" ):
                listener.enterMyDOUBLE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyDOUBLE" ):
                listener.exitMyDOUBLE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyDOUBLE" ):
                return visitor.visitMyDOUBLE(self)
            else:
                return visitor.visitChildren(self)




    def myDOUBLE(self):

        localctx = simpleCParser.MyDOUBLEContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_myDOUBLE)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(simpleCParser.DOUBLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyCHARContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAR(self):
            return self.getToken(simpleCParser.CHAR, 0)

        def getRuleIndex(self):
            return simpleCParser.RULE_myCHAR

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyCHAR" ):
                listener.enterMyCHAR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyCHAR" ):
                listener.exitMyCHAR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyCHAR" ):
                return visitor.visitMyCHAR(self)
            else:
                return visitor.visitChildren(self)




    def myCHAR(self):

        localctx = simpleCParser.MyCHARContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_myCHAR)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(simpleCParser.CHAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MySTRINGContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(simpleCParser.STRING, 0)

        def getRuleIndex(self):
            return simpleCParser.RULE_mySTRING

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMySTRING" ):
                listener.enterMySTRING(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMySTRING" ):
                listener.exitMySTRING(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMySTRING" ):
                return visitor.visitMySTRING(self)
            else:
                return visitor.visitChildren(self)




    def mySTRING(self):

        localctx = simpleCParser.MySTRINGContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mySTRING)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(simpleCParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyLIBContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIB(self):
            return self.getToken(simpleCParser.LIB, 0)

        def getRuleIndex(self):
            return simpleCParser.RULE_myLIB

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyLIB" ):
                listener.enterMyLIB(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyLIB" ):
                listener.exitMyLIB(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyLIB" ):
                return visitor.visitMyLIB(self)
            else:
                return visitor.visitChildren(self)




    def myLIB(self):

        localctx = simpleCParser.MyLIBContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_myLIB)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(simpleCParser.LIB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyTYPEContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simpleCParser.RULE_myTYPE

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyTYPE" ):
                listener.enterMyTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyTYPE" ):
                listener.exitMyTYPE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyTYPE" ):
                return visitor.visitMyTYPE(self)
            else:
                return visitor.visitChildren(self)




    def myTYPE(self):

        localctx = simpleCParser.MyTYPEContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_myTYPE)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simpleCParser.T__0) | (1 << simpleCParser.T__1) | (1 << simpleCParser.T__2) | (1 << simpleCParser.T__3))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyARRAYContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def myID(self):
            return self.getTypedRuleContext(simpleCParser.MyIDContext,0)


        def myINT(self):
            return self.getTypedRuleContext(simpleCParser.MyINTContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_myARRAY

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyARRAY" ):
                listener.enterMyARRAY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyARRAY" ):
                listener.exitMyARRAY(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyARRAY" ):
                return visitor.visitMyARRAY(self)
            else:
                return visitor.visitChildren(self)




    def myARRAY(self):

        localctx = simpleCParser.MyARRAYContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_myARRAY)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.myID()
            self.state = 91
            self.match(simpleCParser.T__4)
            self.state = 92
            self.myINT()
            self.state = 93
            self.match(simpleCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyARRAYITEMContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def myID(self):
            return self.getTypedRuleContext(simpleCParser.MyIDContext,0)


        def expr(self):
            return self.getTypedRuleContext(simpleCParser.ExprContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_myARRAYITEM

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyARRAYITEM" ):
                listener.enterMyARRAYITEM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyARRAYITEM" ):
                listener.exitMyARRAYITEM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyARRAYITEM" ):
                return visitor.visitMyARRAYITEM(self)
            else:
                return visitor.visitChildren(self)




    def myARRAYITEM(self):

        localctx = simpleCParser.MyARRAYITEMContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_myARRAYITEM)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.myID()
            self.state = 96
            self.match(simpleCParser.T__4)
            self.state = 97
            self.expr(0)
            self.state = 98
            self.match(simpleCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyVOIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simpleCParser.RULE_myVOID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyVOID" ):
                listener.enterMyVOID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyVOID" ):
                listener.exitMyVOID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyVOID" ):
                return visitor.visitMyVOID(self)
            else:
                return visitor.visitChildren(self)




    def myVOID(self):

        localctx = simpleCParser.MyVOIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_myVOID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(simpleCParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.IncludeContext)
            else:
                return self.getTypedRuleContext(simpleCParser.IncludeContext,i)


        def defineBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.DefineBlockContext)
            else:
                return self.getTypedRuleContext(simpleCParser.DefineBlockContext,i)


        def myFunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.MyFunctionContext)
            else:
                return self.getTypedRuleContext(simpleCParser.MyFunctionContext,i)


        def getRuleIndex(self):
            return simpleCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = simpleCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==simpleCParser.T__7:
                self.state = 102
                self.include()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simpleCParser.T__0) | (1 << simpleCParser.T__1) | (1 << simpleCParser.T__2) | (1 << simpleCParser.T__3) | (1 << simpleCParser.T__6))) != 0):
                self.state = 110
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 108
                    self.defineBlock()
                    pass

                elif la_ == 2:
                    self.state = 109
                    self.myFunction()
                    pass


                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def myLIB(self):
            return self.getTypedRuleContext(simpleCParser.MyLIBContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = simpleCParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(simpleCParser.T__7)
            self.state = 116
            self.match(simpleCParser.T__8)
            self.state = 117
            self.myLIB()
            self.state = 118
            self.match(simpleCParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MyFunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def myID(self):
            return self.getTypedRuleContext(simpleCParser.MyIDContext,0)


        def defineParams(self):
            return self.getTypedRuleContext(simpleCParser.DefineParamsContext,0)


        def functionBody(self):
            return self.getTypedRuleContext(simpleCParser.FunctionBodyContext,0)


        def myTYPE(self):
            return self.getTypedRuleContext(simpleCParser.MyTYPEContext,0)


        def myVOID(self):
            return self.getTypedRuleContext(simpleCParser.MyVOIDContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_myFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyFunction" ):
                listener.enterMyFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyFunction" ):
                listener.exitMyFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMyFunction" ):
                return visitor.visitMyFunction(self)
            else:
                return visitor.visitChildren(self)




    def myFunction(self):

        localctx = simpleCParser.MyFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_myFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [simpleCParser.T__0, simpleCParser.T__1, simpleCParser.T__2, simpleCParser.T__3]:
                self.state = 120
                self.myTYPE()
                pass
            elif token in [simpleCParser.T__6]:
                self.state = 121
                self.myVOID()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 124
            self.myID()
            self.state = 125
            self.match(simpleCParser.T__10)
            self.state = 126
            self.defineParams()
            self.state = 127
            self.match(simpleCParser.T__11)
            self.state = 128
            self.match(simpleCParser.T__12)
            self.state = 129
            self.functionBody()
            self.state = 130
            self.match(simpleCParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defineParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.DefineParamContext)
            else:
                return self.getTypedRuleContext(simpleCParser.DefineParamContext,i)


        def getRuleIndex(self):
            return simpleCParser.RULE_defineParams

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefineParams" ):
                listener.enterDefineParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefineParams" ):
                listener.exitDefineParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineParams" ):
                return visitor.visitDefineParams(self)
            else:
                return visitor.visitChildren(self)




    def defineParams(self):

        localctx = simpleCParser.DefineParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_defineParams)
        self._la = 0 # Token type
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [simpleCParser.T__0, simpleCParser.T__1, simpleCParser.T__2, simpleCParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.defineParam()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==simpleCParser.T__14:
                    self.state = 133
                    self.match(simpleCParser.T__14)
                    self.state = 134
                    self.defineParam()
                    self.state = 139
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [simpleCParser.T__11]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def myTYPE(self):
            return self.getTypedRuleContext(simpleCParser.MyTYPEContext,0)


        def myID(self):
            return self.getTypedRuleContext(simpleCParser.MyIDContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_defineParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefineParam" ):
                listener.enterDefineParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefineParam" ):
                listener.exitDefineParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineParam" ):
                return visitor.visitDefineParam(self)
            else:
                return visitor.visitChildren(self)




    def defineParam(self):

        localctx = simpleCParser.DefineParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_defineParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.myTYPE()
            self.state = 144
            self.myID()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(simpleCParser.BodyContext,0)


        def returnBlock(self):
            return self.getTypedRuleContext(simpleCParser.ReturnBlockContext,0)


        def getRuleIndex(self):
            return simpleCParser.RULE_functionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionBody" ):
                listener.enterFunctionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionBody" ):
                listener.exitFunctionBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionBody" ):
                return visitor.visitFunctionBody(self)
            else:
                return visitor.visitChildren(self)




    def functionBody(self):

        localctx = simpleCParser.FunctionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_functionBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.body()
            self.state = 147
            self.returnBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.BlockContext)
            else:
                return self.getTypedRuleContext(simpleCParser.BlockContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCParser.FuncContext)
            else:
                return self.getTypedRuleContext(simpleCParser.FuncContext,i)


        def getRuleIndex(self):
            return simpleCParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = simpleCParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 153
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        self.state = 149
                        self.block()
                        pass

                    elif la_ == 2:
                        self.state = 150
                        self.func()
                        self.state = 151
                        self.match(simpleCParser.T__15)
                        pass
